[package]
name = "alpa"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
rand = { version = "0.9.2", optional = true }
embedded-sdmmc = "0.9.0"
buddy_system_allocator = "0.12.0"

[features]
std = ["dep:rand"]
hw_failure_test = []
